[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Window",
    "WebSocket",
    "MessageEvent",
    "Event",
    "EventTarget",
    "HtmlButtonElement",
    "HtmlDivElement",
    "KeyboardEvent",
    "MouseEvent",
] }
wasm-bindgen-futures = "0.4"
